--- a/portfolio.html
+++ b/portfolio.html
@@ -1,57 +1,148 @@
 <!DOCTYPE html>
 <html lang="ru">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
     <title>Portfolio</title>
-    <link rel="stylesheet" href="./css/styles.css">
-</head>
-<body>
-    <header>
-        <nav>
-            <a href="" lang="en">WebStudio</a>
-            <ul>
-                <li><a href="">Студия</a></li>
-                <li><a href="">Портфолио</a></li>
-                <li><a href="">Контакты</a></li>
-            </ul>
-            <a href="mailto=info@devstudio.com">info@devstudio.com</a>
-            <a href="tel=+380961111111">+38 096 111 11 11</a>
-         </nav>   
+    <link rel="stylesheet" href="./css/styles.css" />
+  </head>
+  <body>
+    <header class="header">
+      <nav class="header-nav">
+        <a href="./index.html" lang="en" class="logo"
+          ><span class="logo-web">Web</span><span class="logo-studio-header">Studio</span></a
+        >
+        <ul class="header-list list">
+          <li class="header-list-item"><a href="/" class="header-link link">Студия</a></li>
+          <li class="header-list-item">
+            <a href="/portfolio.html" class="header-link link">Портфолио</a>
+          </li>
+          <li class="header-list-item"><a href="" class="header-link link">Контакты</a></li>
+        </ul>
+        <a href="mailto=info@devstudio.com" class="header-mail link">info@devstudio.com</a>
+        <a href="tel=+380961111111" class="header-tel link">+38 096 111 11 11</a>
+      </nav>
     </header>
     <main>
-        <section>
-            <ul>
-                <li><button type="button">Все</button></li>
-                <li><button type="button">Веб-сайты</button></li>
-                <li><button type="button">Приложения</button></li>
-                <li><button type="button">Дизайн</button></li>
-                <li><button type="button">Маркетинг</button></li>
-            </ul>
-            <ul>
-                <li><button type="button">Технокряк</button></li>
-                <li><button type="button">Постер New Orlean vs Golden Star</button></li>
-                <li><button type="button">Ресторан Seafood</button></li>
-                <li><button type="button">Проект Prime</button></li>
-                <li><button type="button">Проект Boxes</button></li>
-                <li><button type="button">Inspiration has no Borders</button></li>
-                <li><button type="button">Издание Limited Edition</button></li>
-                <li><button type="button">Проект LAB</button></li>
-                <li><button type="button">Growing Business</button></li>
-            </ul>
-          </section>
+      <section class="portfolio">
+        <h1 hidden>Примеры работ</h1>
+        <ul class="portfolio-btn list">
+          <li><button type="button" class="portfolio-btn-item">Все</button></li>
+          <li><button type="button" class="portfolio-btn-item">Веб-сайты</button></li>
+          <li><button type="button" class="portfolio-btn-item">Приложения</button></li>
+          <li><button type="button" class="portfolio-btn-item">Дизайн</button></li>
+          <li><button type="button" class="portfolio-btn-item">Маркетинг</button></li>
+        </ul>
+        <ul class="portfolio-list list">
+          <li>
+            <img
+              src="./images/portfolio/web-site-1.jpg"
+              alt="ноутбук с сайтом"
+              width="370"
+              height="295"
+            />
+            <h2 class="portfolio-list-title">Технокряк</h2>
+            <p class="portfolio-list-text">Веб-сайт</p>
+          </li>
+          <li>
+            <img
+              src="./images/portfolio/designer-1.jpg"
+              alt="постер Орлеан против Голден стейт"
+              width="370"
+              height="295"
+            />
+            <h2 class="portfolio-list-title">
+              Постер <span lang="en">Orlean vs Golden Star</span>
+            </h2>
+            <p class="portfolio-list-text">Дизайн</p>
+          </li>
+          <li>
+            <img
+              src="./images/portfolio/app-1.jpg"
+              alt="логотип ресторана"
+              width="370"
+              height="295"
+            />
+            <h2 class="portfolio-list-title">Ресторан <span lang="en">Seafood</span></h2>
+            <p class="portfolio-list-text">Приложение</p>
+          </li>
+          <li>
+            <img src="./images/portfolio/marketing-1.jpg" alt="наушники" width="370" height="295" />
+            <h2 class="portfolio-list-title">Проект <span lang="en">Prime</span></h2>
+            <p class="portfolio-list-text">Маркетинг</p>
+          </li>
+          <li>
+            <img src="./images/portfolio/app-2.jpg" alt="две коробки" width="370" height="295" />
+            <h2 class="portfolio-list-title">Проект <span lang="en">Boxes</span></h2>
+            <p class="portfolio-list-text">Приложение</p>
+          </li>
+          <li>
+            <img
+              src="./images/portfolio/web-site-2.jpg"
+              alt="экран с сайтом"
+              width="370"
+              height="295"
+            />
+            <h2 class="portfolio-list-title" lang="en">Inspiration has no Borders</h2>
+            <p class="portfolio-list-text">Веб-сайт</p>
+          </li>
+          <li>
+            <img
+              src="./images/portfolio/designer-2.jpg"
+              alt="развернутый журнал"
+              width="370"
+              height="295"
+            />
+            <h2 class="portfolio-list-title">Издание <span lang="en">Limited Edition</span></h2>
+            <p class="portfolio-list-text">Дизайн</p>
+          </li>
+          <li>
+            <img
+              src="./images/portfolio/marketing-2.jpg"
+              alt="бирка с логотипом"
+              width="370"
+              height="295"
+            />
+            <h2 class="portfolio-list-title">Проект <span lang="en">LAB</span></h2>
+            <p class="portfolio-list-text">Маркетинг</p>
+          </li>
+          <li>
+            <img
+              src="./images/portfolio/app-3.jpg"
+              alt="ноутбук с сайтом"
+              width="370"
+              height="295"
+            />
+            <h2 class="portfolio-list-title" lang="en">Growing Business</h2>
+            <p class="portfolio-list-text">Приложение</p>
+          </li>
+        </ul>
+      </section>
     </main>
-    <footer>
-        <a href="" lang="en">WebStudio</a>
-        <address>
-           <ul>
-               <li><a href="">г. Киев, пр-т Леси Украинки, 26</a></li>
-               <li><a href="mailto=info@example.com">info@example.com</a></li>
-               <li><a href="tel=+380991111111">+38 099 111 11 11</a></li>
-           </ul>
-       </address>
+    <footer class="footer">
+      <a href="./index.html" lang="en" class="logo">
+        <span class="logo-web">Web</span><span class="logo-studio-footer">Studio</span></a
+      >
+      <address class="footer-address">
+        <ul class="footer-list list">
+          <li class="footer-list-item">
+            <a href="" class="footer-list-address link">г. Киев, пр-т Леси Украинки, 26</a>
+          </li>
+          <li class="footer-list-item">
+            <a href="mailto=info@example.com" class="footer-mail link">info@example.com</a>
+          </li>
+          <li class="footer-list-item">
+            <a href="tel=+380991111111" class="fotter-tel link">+38 099 111 11 11</a>
+          </li>
+        </ul>
+      </address>
     </footer>
-    
-</body>
+  </body>
 </html>
