--- a/portfolio.html
+++ b/portfolio.html
@@ -20,9 +20,11 @@
           ><span class="logo-web">Web</span><span class="logo-studio-header">Studio</span></a
         >
         <ul class="header-list list">
-          <li class="header-list-item"><a href="/" class="header-link link">Студия</a></li>
           <li class="header-list-item">
-            <a href="/portfolio.html" class="header-link link">Портфолио</a>
+            <a href="./index.html" class="header-link link">Студия</a>
+          </li>
+          <li class="header-list-item">
+            <a href="./portfolio.html" class="header-link link">Портфолио</a>
           </li>
           <li class="header-list-item"><a href="" class="header-link link">Контакты</a></li>
         </ul>
