--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <ul class="header-list list">
           <li class="header-list-item"><a href="/" class="header-link link">Студия</a></li>
           <li class="header-list-item">
-            <a href="/portfolio.html" class="header-link link">Портфолио</a>
+            <a href="./portfolio.html" class="header-link link">Портфолио</a>
           </li>
           <li class="header-list-item"><a href="" class="header-link link">Контакты</a></li>
         </ul>
